backend/deployment/k8s-deployment.yml
###################################
# USERS
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: us-central1-docker.pkg.dev/GOOGLE_PROJECT/backend/users:latest
          ports:
            - containerPort: 3000
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: servicio-users
  annotations:
    cloud.google.com/backend-config: '{"default": "users-config"}'
spec:
  type: NodePort
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31020

---

###################################
# Proyects
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projects
  labels:
    app: projects
spec:
  replicas: 1
  selector:
    matchLabels:
      app: projects
  template:
    metadata:
      labels:
        app: projects
    spec:
      containers:
        - name: projects
          image: us-central1-docker.pkg.dev/GOOGLE_PROJECT/backend/proyects:latest
          ports:
            - containerPort: 3000
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: servicio-projects
  annotations:
    cloud.google.com/backend-config: '{"default": "projects-config"}'
spec:
  type: NodePort
  selector:
    app: projects
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31021

---

###################################
# Tests
###################################
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: tests
#   labels:
#     app: tests
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: tests
#   template:
#     metadata:
#       labels:
#         app: tests
#     spec:
#       containers:
#         - name: tests
#           image: us-central1-docker.pkg.dev/GOOGLE_PROJECT/backend/tests:latest
#           env:
#             - name: "ENV"
#               value: "PROD"
#             - name: "DB_USER"
#               valueFrom:
#                 secretKeyRef:
#                   name: appsecrets 
#                   key: db_user
#             - name: "DB_HOST"
#               valueFrom:
#                 secretKeyRef:
#                   name: appsecrets 
#                   key: db_host
#             - name: "DB_PORT"
#               valueFrom:
#                 secretKeyRef:
#                   name: appsecrets 
#                   key: db_port
#             - name: "DB_NAME"
#               valueFrom:
#                 secretKeyRef:
#                   name: appsecrets 
#                   key: db_name
#             - name: "DB_PASSWORD"
#               valueFrom:
#                 secretKeyRef:
#                   name: appsecrets 
#                   key: db_password
#           ports:
#             - containerPort: 3000
#           # Realizar pull siempre a la imagen
#           imagePullPolicy: Always

# ---

# apiVersion: cloud.google.com/v1
# kind: BackendConfig
# metadata:
#   name: tests-config
# spec:
#   healthCheck:
#     checkIntervalSec: 30
#     port: 3000
#     type: HTTP
#     requestPath: /tests/ping
# ---
# kind: Service
# apiVersion: v1
# metadata:
#   name: servicio-tests
#   annotations:
#     cloud.google.com/backend-config: '{"default": "tests-config"}'
# spec:
#   type: NodePort
#   selector:
#     app: tests
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 3000
#       nodePort: 31022

# ---

###################################
# Auth
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: us-central1-docker.pkg.dev/GOOGLE_PROJECT/backend/auth:latest
          ports:
            - containerPort: 3000
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: servicio-auth
  annotations:
    cloud.google.com/backend-config: '{"default": "auth-config"}'
spec:
  type: NodePort
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31023

---
