backend/deployment/k8s-ingress-deployment.yml
###################################
# INGRESS
###################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress-8
  labels:
    name: gateway-ingress-8
spec:
  # tls:
  #   - hosts:
  #     - ingress.local
  #     secretName: ingress-local-cert
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /users
        backend:
          service:
            name: servicio-users
            port: 
              number: 80
      # - pathType: Prefix
      #   path: /tests
      #   backend:
      #     service:
      #       name: servicio-tests
      #       port: 
      #         number: 80
      - pathType: Prefix
        path: /projects
        backend:
          service:
            name: servicio-projects
            port: 
              number: 80
      - pathType: Prefix
        path: /auth
        backend:
          service:
            name: servicio-auth
            port: 
              number: 80
